<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="12dp"

            android:text="@string/btn_forgot_password"
            android:textColor="@color/btn_backgroundcolor"
            android:textSize="20sp" />
        <!--android:onClick="button_forgot_password_click"-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="48dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />
<!--TODO declare the logic and implementation of  AppVersionInfoView class -->
            <!--<com.airtel.kyc_congo_b.views.custom.AppVersionInfoView-->
                <!--android:id="@+id/tv_version_info"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="8dp"-->
                <!--android:textColor="#3C3C3C"-->
                <!--android:textSize="14sp" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_username_auuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/user_name"
                android:inputType="number"
                android:lines="1"
                android:maxLength="@integer/msisdn_length" />
            <!--android:maxLength="9" />-->
            <!--android:maxLength="@integer/auuid_length" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_login_via_password" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_login_via_otp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/edt_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="0.9"
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:maxLength="6" />

                <Button
                    android:id="@+id/btn_generate_otp"
                    style="@style/DefaultButtonNoMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/generate_otp"
                    android:textAllCaps="false"
                    android:textSize="14sp" />
                <!--android:onClick="button_generate_otp"-->

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_forgot_password"
                    style="@style/DefaultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="0.2"
                    android:text="@string/btn_reset" />
                <!--android:onClick="button_reset_clicked"-->

                <Button
                    android:id="@+id/btn_login"
                    style="@style/DefaultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="0.8"
                    android:text="@string/btn_login" />
                <!--android:onClick="button_login_click"-->

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
